examples/test/testpolicy5096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5096
  namespace: namespace250
spec:
  podSelector:
    matchLabels:
      key33: value5
      key23: value48
      key3: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key48: value10
          key21: value15
      podSelector:
        matchLabels:
          key32: value44
